# soundboard

./: .env.example  .gitignore  README.md  prod.sh  pyproject.toml  start.sh  tailwind.config.js
app/: main.py
static/: index.html  styles.css
templates/: audio_settings_modal.html  login.html  sound_buttons.html  sound_edit_modal.html  status_message.html  upload_form.html
